--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,9 +80,12 @@
 }
 
 html,
-body {
-  max-width: 100vw;
+body,
+#__next {
+  width: 100vw;
+  height: 100%;
   overflow-x: hidden;
+  display: flex;
 }
 
 body {
