--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -82,9 +82,9 @@
 html,
 body,
 #__next {
-  width: 100vw;
+  width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  overflow: auto;
   display: flex;
 }
 
